# lz4-wasm

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deno.json  lz4.bench.ts  mod.ts  rust-toolchain.toml
.github/workflows/: ci.yml
scripts/: build.ts  wasm_opt.ts
src/: lib.rs
