[package]
  name    = "lz4-wasm"
  version = "0.2.0"
  authors = ["Nick Berlette <nick@berlette.com>"]
  edition = "2024"

[lib]
  name       = "lz4"
  path       = "src/lib.rs"
  crate-type = ["cdylib"]

[features]
  default    = ["alloc", "compress", "decompress"]
  alloc      = ["lol_alloc"]
  compress   = []
  decompress = []
  mt         = ["alloc"]

[dependencies]
  lz4_flex = { version = "=0.9.2", default-features = false, features = [
    "checked-decode",
  ] }
  wasm-bindgen = { version = "=0.2.100", default-features = false }
  lol_alloc = { version = "=0.4.1", optional = true }

[profile.release]
  lto           = true
  codegen-units = 1
  opt-level     = "s"     # we build for speed round these parts
  panic         = "abort"
